--- a/templates/ubuntu16.04.dockerfile.jinja2
+++ b/templates/ubuntu16.04.dockerfile.jinja2
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:9.1-base-ubuntu16.04
+FROM {{ base_image }}
 
 # Install some basic utilities
 RUN apt-get update && apt-get install -y \
@@ -25,7 +25,7 @@ ENV HOME=/home/user
 RUN chmod 777 /home/user
 
 # Install Miniconda
-RUN curl -so ~/miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-4.5.1-Linux-x86_64.sh \
+RUN curl -sLo ~/miniconda.sh https://repo.continuum.io/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh \
  && chmod +x ~/miniconda.sh \
  && ~/miniconda.sh -b -p ~/miniconda \
  && rm ~/miniconda.sh
@@ -33,44 +33,38 @@ ENV PATH=/home/user/miniconda/bin:$PATH
 ENV CONDA_AUTO_UPDATE_CONDA=false
 
 # Create a Python 3.6 environment
-RUN /home/user/miniconda/bin/conda install conda-build \
- && /home/user/miniconda/bin/conda create -y --name py36 python=3.6.5 \
+RUN /home/user/miniconda/bin/conda create -y --name py36 python=3.6.9 \
  && /home/user/miniconda/bin/conda clean -ya
 ENV CONDA_DEFAULT_ENV=py36
 ENV CONDA_PREFIX=/home/user/miniconda/envs/$CONDA_DEFAULT_ENV
 ENV PATH=$CONDA_PREFIX/bin:$PATH
+RUN /home/user/miniconda/bin/conda install conda-build=3.18.9=py36_3 \
+ && /home/user/miniconda/bin/conda clean -ya
 
-# CUDA 9.1-specific steps
-RUN conda install -y -c pytorch \
-    cuda91=1.0 \
-    magma-cuda91=2.3.0 \
-    pytorch=0.4.0 \
-    torchvision=0.2.1 \
- && conda clean -ya
+{{ additional_steps }}
 
 # Install HDF5 Python bindings
-RUN conda install -y \
-    h5py \
+RUN conda install -y h5py=2.8.0 \
  && conda clean -ya
-RUN pip install h5py-cache
+RUN pip install h5py-cache==1.0
 
 # Install Torchnet, a high-level framework for PyTorch
-RUN pip install git+https://github.com/pytorch/tnt.git@master
+RUN pip install torchnet==0.0.4
 
 # Install Requests, a Python library for making HTTP requests
-RUN conda install -y requests && conda clean -ya
+RUN conda install -y requests=2.19.1 \
+ && conda clean -ya
 
 # Install Graphviz
-RUN conda install -y graphviz=2.38.0 \
+RUN conda install -y graphviz=2.40.1 python-graphviz=0.8.4 \
  && conda clean -ya
-RUN pip install graphviz
 
 # Install OpenCV3 Python bindings
 RUN sudo apt-get update && sudo apt-get install -y --no-install-recommends \
     libgtk2.0-0 \
     libcanberra-gtk-module \
  && sudo rm -rf /var/lib/apt/lists/*
-RUN conda install -y -c menpo opencv3 \
+RUN conda install -y -c menpo opencv3=3.1.0 \
  && conda clean -ya
 
 # Set the default command to python3
