Add checkout step to actions

--- a/publish_workflow.yml.jinja2
+++ b/publish_workflow.yml.jinja2
@@ -11,6 +11,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: docker/build-push-action@v1
       with:
         username: {% raw %}${{ secrets.DOCKER_USERNAME }}{% endraw %}
