--- a/templates/20211029.dockerfile.jinja2
+++ b/templates/20211029.dockerfile.jinja2
@@ -1,5 +1,8 @@
 FROM {{ base_image }}
 
+# Remove any third-party apt sources to avoid issues with expiring keys.
+RUN rm -f /etc/apt/sources.list.d/*.list
+
 # Install some basic utilities
 RUN apt-get update && apt-get install -y \
     curl \
