--- a/templates/20221212.dockerfile.jinja2
+++ b/templates/20221212.dockerfile.jinja2
@@ -43,5 +43,7 @@ RUN micromamba create -qy -n base -f /app/conda-linux-64.lock \
  && micromamba shell init --shell=bash --prefix="$MAMBA_ROOT_PREFIX" \
  && micromamba clean -qya
 
+{{ post_conda_steps ~ (post_conda_steps and '\n') -}}
+
 # Set the default command to python3.
 CMD ["python3"]
